--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -3,7 +3,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
       <ul class="nav navbar-nav">
-        <li class="active"><a ng-href="#">Home</a></li>
+        <li class="active"><a ng-href="#/">Home</a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right acme-navbar-text">
