--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -18,8 +18,7 @@
       </thead>
 
         <tr ng-repeat="rating in main.playerRatings">
-          <td class="square"><span>{{rating.detailedRatings[0].ranking}}
-          </span>
+          <td ><span class="square">{{rating.detailedRatings[0].ranking}}</span>
           </td>
 
           <td>{{rating.player.playerName.givenName}} {{rating.player.playerName.surname}}</td>
