--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -2,19 +2,25 @@
 .square {
   float: left;
   position: relative;
-  left: 30%;
+  left: 20%;
   width: 30px;
   height: 30px;
   margin: 5px;
-  border: 1px solid rgba(0, 0, 0, .2);
   background: #333333;
-color:white}
+  color: white;
+  text-align: center;
+  padding-top:5px;
+}
+
 thead {
   border-style: solid;
-  border-top-width: 3px ;
+  border-top-width: 3px;
   border-top-color: darkblue;
   text-align: center;
 }
-tr{
-  text-align :left;
+
+tr {
+  text-align: left;
 }
+
+
